--- a/conf/config.properties
+++ b/conf/config.properties
@@ -19,160 +19,160 @@
 #
 
 ####################
-### 基本配置
+### \u00E5\u009F\u00BA\u00E6\u009C\u00AC\u00E9\u0085\u008D\u00E7\u00BD\u00AE
 ####################
-# iginx 绑定的 ip
+# iginx \u00E7\u00BB\u0091\u00E5\u00AE\u009A\u00E7\u009A\u0084 ip
 ip=0.0.0.0
 
-# iginx 绑定的端口
+# iginx \u00E7\u00BB\u0091\u00E5\u00AE\u009A\u00E7\u009A\u0084\u00E7\u00AB\u00AF\u00E5\u008F\u00A3
 port=6888
 
-# iginx 本身的用户名
+# iginx \u00E6\u009C\u00AC\u00E8\u00BA\u00AB\u00E7\u009A\u0084\u00E7\u0094\u00A8\u00E6\u0088\u00B7\u00E5\u0090\u008D
 username=root
 
-# iginx 本身的密码
+# iginx \u00E6\u009C\u00AC\u00E8\u00BA\u00AB\u00E7\u009A\u0084\u00E5\u00AF\u0086\u00E7\u00A0\u0081
 password=root
 
-# 数据库列表，使用','分隔不同实例
-storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
+# \u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u00BA\u0093\u00E5\u0088\u0097\u00E8\u00A1\u00A8\u00EF\u00BC\u008C\u00E4\u00BD\u00BF\u00E7\u0094\u00A8','\u00E5\u0088\u0086\u00E9\u009A\u0094\u00E4\u00B8\u008D\u00E5\u0090\u008C\u00E5\u00AE\u009E\u00E4\u00BE\u008B
+#storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
 #storageEngineList=127.0.0.1#8086#influxdb#url=http://localhost:8086/#token=your-token#organization=your-organization#has_data=false
 #storageEngineList=127.0.0.1#6667#filesystem#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=0#dummy_dir=dummy#dummy.struct=LegacyFilesystem#dummy.config.chunk_size_in_bytes=1048576#dummy.config.memory_pool_size=100#client.connectPool.maxTotal=100
 #storageEngineList=127.0.0.1#5432#relational#engine=postgresql#username=postgres#password=postgres#has_data=false
 #storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#password=mysql#has_data=false#meta_properties_path=your-meta-properties-path
 #storageEngineList=127.0.0.1#27017#mongodb#uri="mongodb://127.0.0.1:27017/?maxPoolSize=200&maxIdleTimeMS=60000&waitQueueTimeoutMS=50000"#has_data=false#schema.sample.size=1000#dummy.sample.size=0
 #storageEngineList=127.0.0.1#6379#redis#has_data=false#is_read_only=false#timeout=10000#data_db=1#dummy_db=0
-
-# UDF定义文件夹存储路径（相对或绝对），文件夹内的文件需要按以下格式进行编写
+storageEngineList=127.0.0.1#6667#parquet#dir=parquetData#iginx_port=6888
+# UDF\u00E5\u00AE\u009A\u00E4\u00B9\u0089\u00E6\u0096\u0087\u00E4\u00BB\u00B6\u00E5\u00A4\u00B9\u00E5\u00AD\u0098\u00E5\u0082\u00A8\u00E8\u00B7\u00AF\u00E5\u00BE\u0084\u00EF\u00BC\u0088\u00E7\u009B\u00B8\u00E5\u00AF\u00B9\u00E6\u0088\u0096\u00E7\u00BB\u009D\u00E5\u00AF\u00B9\u00EF\u00BC\u0089\u00EF\u00BC\u008C\u00E6\u0096\u0087\u00E4\u00BB\u00B6\u00E5\u00A4\u00B9\u00E5\u0086\u0085\u00E7\u009A\u0084\u00E6\u0096\u0087\u00E4\u00BB\u00B6\u00E9\u009C\u0080\u00E8\u00A6\u0081\u00E6\u008C\u0089\u00E4\u00BB\u00A5\u00E4\u00B8\u008B\u00E6\u00A0\u00BC\u00E5\u00BC\u008F\u00E8\u00BF\u009B\u00E8\u00A1\u008C\u00E7\u00BC\u0096\u00E5\u0086\u0099
 # %defaultUDFDir%
-#   |- udf_list         (udf函数列表及元信息文件)
-#   |- python_scripts/   (python脚本文件夹)
-#       |- xxx.py       (python脚本)
+#   |- udf_list         (udf\u00E5\u0087\u00BD\u00E6\u0095\u00B0\u00E5\u0088\u0097\u00E8\u00A1\u00A8\u00E5\u008F\u008A\u00E5\u0085\u0083\u00E4\u00BF\u00A1\u00E6\u0081\u00AF\u00E6\u0096\u0087\u00E4\u00BB\u00B6)
+#   |- python_scripts/   (python\u00E8\u0084\u009A\u00E6\u009C\u00AC\u00E6\u0096\u0087\u00E4\u00BB\u00B6\u00E5\u00A4\u00B9)
+#       |- xxx.py       (python\u00E8\u0084\u009A\u00E6\u009C\u00AC)
 defaultUDFDir=udf_funcs
 
-# 写入的副本个数
+# \u00E5\u0086\u0099\u00E5\u0085\u00A5\u00E7\u009A\u0084\u00E5\u0089\u00AF\u00E6\u009C\u00AC\u00E4\u00B8\u00AA\u00E6\u0095\u00B0
 replicaNum=0
 
-# 底层数据库类名
+# \u00E5\u00BA\u0095\u00E5\u00B1\u0082\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u00BA\u0093\u00E7\u00B1\u00BB\u00E5\u0090\u008D
 databaseClassNames=iotdb12=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage,influxdb=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage,filesystem=cn.edu.tsinghua.iginx.filesystem.FileSystemStorage,relational=cn.edu.tsinghua.iginx.relational.RelationalStorage,mongodb=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage,redis=cn.edu.tsinghua.iginx.redis.RedisStorage
 
-# 内存任务执行线程池
+# \u00E5\u0086\u0085\u00E5\u00AD\u0098\u00E4\u00BB\u00BB\u00E5\u008A\u00A1\u00E6\u0089\u00A7\u00E8\u00A1\u008C\u00E7\u00BA\u00BF\u00E7\u00A8\u008B\u00E6\u00B1\u00A0
 memoryTaskThreadPoolSize=200
 
-# 每个存储节点对应的工作线程数
+# \u00E6\u00AF\u008F\u00E4\u00B8\u00AA\u00E5\u00AD\u0098\u00E5\u0082\u00A8\u00E8\u008A\u0082\u00E7\u0082\u00B9\u00E5\u00AF\u00B9\u00E5\u00BA\u0094\u00E7\u009A\u0084\u00E5\u00B7\u00A5\u00E4\u00BD\u009C\u00E7\u00BA\u00BF\u00E7\u00A8\u008B\u00E6\u0095\u00B0
 physicalTaskThreadPoolSizePerStorage=100
 
-# 每个存储节点任务最大堆积数
+# \u00E6\u00AF\u008F\u00E4\u00B8\u00AA\u00E5\u00AD\u0098\u00E5\u0082\u00A8\u00E8\u008A\u0082\u00E7\u0082\u00B9\u00E4\u00BB\u00BB\u00E5\u008A\u00A1\u00E6\u009C\u0080\u00E5\u00A4\u00A7\u00E5\u00A0\u0086\u00E7\u00A7\u00AF\u00E6\u0095\u00B0
 maxCachedPhysicalTaskPerStorage=500
 
-# 逻辑层优化策略
+# \u00E9\u0080\u00BB\u00E8\u00BE\u0091\u00E5\u00B1\u0082\u00E4\u00BC\u0098\u00E5\u008C\u0096\u00E7\u00AD\u0096\u00E7\u0095\u00A5
 queryOptimizer=rbo
 
-# 优化器规则
+# \u00E4\u00BC\u0098\u00E5\u008C\u0096\u00E5\u0099\u00A8\u00E8\u00A7\u0084\u00E5\u0088\u0099
 ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,ConstantPropagationRule=on,DistinctEliminateRule=on,\
   ConstantFoldingRule=on,FilterPushDownRule=off,JoinFactorizationRule=on,SetTransformPushDownPathUnionJoinRule=off
 
-# ParallelFilter触发行数
+# ParallelFilter\u00E8\u00A7\u00A6\u00E5\u008F\u0091\u00E8\u00A1\u008C\u00E6\u0095\u00B0
 parallelFilterThreshold=10000
-# ParallelGroupBy触发行数
+# ParallelGroupBy\u00E8\u00A7\u00A6\u00E5\u008F\u0091\u00E8\u00A1\u008C\u00E6\u0095\u00B0
 parallelGroupByRowsThreshold=10000
-# ParallelApplyFunc触发分组数
+# ParallelApplyFunc\u00E8\u00A7\u00A6\u00E5\u008F\u0091\u00E5\u0088\u0086\u00E7\u00BB\u0084\u00E6\u0095\u00B0
 parallelApplyFuncGroupsThreshold=1000
-# ParallelGroupBy线程池大小
+# ParallelGroupBy\u00E7\u00BA\u00BF\u00E7\u00A8\u008B\u00E6\u00B1\u00A0\u00E5\u00A4\u00A7\u00E5\u00B0\u008F
 parallelGroupByPoolSize=5
-# ParallelGroupBy线程池数量
+# ParallelGroupBy\u00E7\u00BA\u00BF\u00E7\u00A8\u008B\u00E6\u00B1\u00A0\u00E6\u0095\u00B0\u00E9\u0087\u008F
 parallelGroupByPoolNum=5
-# ParallelGroupBy线程池数量
+# ParallelGroupBy\u00E7\u00BA\u00BF\u00E7\u00A8\u008B\u00E6\u00B1\u00A0\u00E6\u0095\u00B0\u00E9\u0087\u008F
 streamParallelGroupByWorkerNum=5
 
-# 约束
+# \u00E7\u00BA\u00A6\u00E6\u009D\u009F
 constraintChecker=naive
 
-# 物理层优化策略
+# \u00E7\u0089\u00A9\u00E7\u0090\u0086\u00E5\u00B1\u0082\u00E4\u00BC\u0098\u00E5\u008C\u0096\u00E7\u00AD\u0096\u00E7\u0095\u00A5
 physicalOptimizer=naive
 
-# 分片策略
+# \u00E5\u0088\u0086\u00E7\u0089\u0087\u00E7\u00AD\u0096\u00E7\u0095\u00A5
 policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
 #policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
 
-#统计信息收集类
+#\u00E7\u00BB\u009F\u00E8\u00AE\u00A1\u00E4\u00BF\u00A1\u00E6\u0081\u00AF\u00E6\u0094\u00B6\u00E9\u009B\u0086\u00E7\u00B1\u00BB
 # statisticsCollectorClassName=cn.edu.tsinghua.iginx.statistics.StatisticsCollector
 
-# 统计信息打印间隔，单位毫秒
+# \u00E7\u00BB\u009F\u00E8\u00AE\u00A1\u00E4\u00BF\u00A1\u00E6\u0081\u00AF\u00E6\u0089\u0093\u00E5\u008D\u00B0\u00E9\u0097\u00B4\u00E9\u009A\u0094\u00EF\u00BC\u008C\u00E5\u008D\u0095\u00E4\u00BD\u008D\u00E6\u00AF\u00AB\u00E7\u00A7\u0092
 # statisticsLogInterval=5000
 
-# 重分片时，新分片的结束时间多加的间距，单位为秒
+# \u00E9\u0087\u008D\u00E5\u0088\u0086\u00E7\u0089\u0087\u00E6\u0097\u00B6\u00EF\u00BC\u008C\u00E6\u0096\u00B0\u00E5\u0088\u0086\u00E7\u0089\u0087\u00E7\u009A\u0084\u00E7\u00BB\u0093\u00E6\u009D\u009F\u00E6\u0097\u00B6\u00E9\u0097\u00B4\u00E5\u00A4\u009A\u00E5\u008A\u00A0\u00E7\u009A\u0084\u00E9\u0097\u00B4\u00E8\u00B7\u009D\u00EF\u00BC\u008C\u00E5\u008D\u0095\u00E4\u00BD\u008D\u00E4\u00B8\u00BA\u00E7\u00A7\u0092
 reshardFragmentTimeMargin=60
 
-# thrift线程池最小线程数量
+# thrift\u00E7\u00BA\u00BF\u00E7\u00A8\u008B\u00E6\u00B1\u00A0\u00E6\u009C\u0080\u00E5\u00B0\u008F\u00E7\u00BA\u00BF\u00E7\u00A8\u008B\u00E6\u0095\u00B0\u00E9\u0087\u008F
 minThriftWorkerThreadNum = 20
 
-# thrift线程池最大线程数量
+# thrift\u00E7\u00BA\u00BF\u00E7\u00A8\u008B\u00E6\u00B1\u00A0\u00E6\u009C\u0080\u00E5\u00A4\u00A7\u00E7\u00BA\u00BF\u00E7\u00A8\u008B\u00E6\u0095\u00B0\u00E9\u0087\u008F
 maxThriftWrokerThreadNum = 2147483647
 
-# 当前是否是UT测试环境
+# \u00E5\u00BD\u0093\u00E5\u0089\u008D\u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E6\u0098\u00AFUT\u00E6\u00B5\u008B\u00E8\u00AF\u0095\u00E7\u008E\u00AF\u00E5\u00A2\u0083
 utTestEnv = false
 
 ####################
-### Migration 相关配置
+### Migration \u00E7\u009B\u00B8\u00E5\u0085\u00B3\u00E9\u0085\u008D\u00E7\u00BD\u00AE
 ####################
 
-# 迁移时，每次迁移数据行数
+# \u00E8\u00BF\u0081\u00E7\u00A7\u00BB\u00E6\u0097\u00B6\u00EF\u00BC\u008C\u00E6\u00AF\u008F\u00E6\u00AC\u00A1\u00E8\u00BF\u0081\u00E7\u00A7\u00BB\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E8\u00A1\u008C\u00E6\u0095\u00B0
 migrationBatchSize=100
 
-# 按序列维度切分分片时，每次最多分成多少片
+# \u00E6\u008C\u0089\u00E5\u00BA\u008F\u00E5\u0088\u0097\u00E7\u00BB\u00B4\u00E5\u00BA\u00A6\u00E5\u0088\u0087\u00E5\u0088\u0086\u00E5\u0088\u0086\u00E7\u0089\u0087\u00E6\u0097\u00B6\u00EF\u00BC\u008C\u00E6\u00AF\u008F\u00E6\u00AC\u00A1\u00E6\u009C\u0080\u00E5\u00A4\u009A\u00E5\u0088\u0086\u00E6\u0088\u0090\u00E5\u00A4\u009A\u00E5\u00B0\u0091\u00E7\u0089\u0087
 maxReshardFragmentsNum=3
 
-# 按序列维度切分分片时，时间序列负载高于平均值的最大差值倍数
+# \u00E6\u008C\u0089\u00E5\u00BA\u008F\u00E5\u0088\u0097\u00E7\u00BB\u00B4\u00E5\u00BA\u00A6\u00E5\u0088\u0087\u00E5\u0088\u0086\u00E5\u0088\u0086\u00E7\u0089\u0087\u00E6\u0097\u00B6\u00EF\u00BC\u008C\u00E6\u0097\u00B6\u00E9\u0097\u00B4\u00E5\u00BA\u008F\u00E5\u0088\u0097\u00E8\u00B4\u009F\u00E8\u00BD\u00BD\u00E9\u00AB\u0098\u00E4\u00BA\u008E\u00E5\u00B9\u00B3\u00E5\u009D\u0087\u00E5\u0080\u00BC\u00E7\u009A\u0084\u00E6\u009C\u0080\u00E5\u00A4\u00A7\u00E5\u00B7\u00AE\u00E5\u0080\u00BC\u00E5\u0080\u008D\u00E6\u0095\u00B0
 maxTimeseriesLoadBalanceThreshold=2
 
-# 迁移策略类名
+# \u00E8\u00BF\u0081\u00E7\u00A7\u00BB\u00E7\u00AD\u0096\u00E7\u0095\u00A5\u00E7\u00B1\u00BB\u00E5\u0090\u008D
 #migrationPolicyClassName=cn.edu.tsinghua.iginx.migration.SimulationBasedMigrationPolicy
 migrationPolicyClassName=cn.edu.tsinghua.iginx.migration.GreedyMigrationPolicy
 
 ##########################
-### 分片清理配置
+### \u00E5\u0088\u0086\u00E7\u0089\u0087\u00E6\u00B8\u0085\u00E7\u0090\u0086\u00E9\u0085\u008D\u00E7\u00BD\u00AE
 ##########################
 
-# 是否开启监控系统
+# \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E5\u00BC\u0080\u00E5\u0090\u00AF\u00E7\u009B\u0091\u00E6\u008E\u00A7\u00E7\u00B3\u00BB\u00E7\u00BB\u009F
 enableMonitor=false
 
-# 监控系统判断间隔时间（单位: s）
+# \u00E7\u009B\u0091\u00E6\u008E\u00A7\u00E7\u00B3\u00BB\u00E7\u00BB\u009F\u00E5\u0088\u00A4\u00E6\u0096\u00AD\u00E9\u0097\u00B4\u00E9\u009A\u0094\u00E6\u0097\u00B6\u00E9\u0097\u00B4\u00EF\u00BC\u0088\u00E5\u008D\u0095\u00E4\u00BD\u008D: s\u00EF\u00BC\u0089
 loadBalanceCheckInterval=3
 
-# 是否开启分片清理
+# \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E5\u00BC\u0080\u00E5\u0090\u00AF\u00E5\u0088\u0086\u00E7\u0089\u0087\u00E6\u00B8\u0085\u00E7\u0090\u0086
 enableFragmentCompaction=false
 
-# 分片合并的写入负载阈值（小于该阈值的分片将被删除或合并）
+# \u00E5\u0088\u0086\u00E7\u0089\u0087\u00E5\u0090\u0088\u00E5\u00B9\u00B6\u00E7\u009A\u0084\u00E5\u0086\u0099\u00E5\u0085\u00A5\u00E8\u00B4\u009F\u00E8\u00BD\u00BD\u00E9\u0098\u0088\u00E5\u0080\u00BC\u00EF\u00BC\u0088\u00E5\u00B0\u008F\u00E4\u00BA\u008E\u00E8\u00AF\u00A5\u00E9\u0098\u0088\u00E5\u0080\u00BC\u00E7\u009A\u0084\u00E5\u0088\u0086\u00E7\u0089\u0087\u00E5\u00B0\u0086\u00E8\u00A2\u00AB\u00E5\u0088\u00A0\u00E9\u0099\u00A4\u00E6\u0088\u0096\u00E5\u0090\u0088\u00E5\u00B9\u00B6\u00EF\u00BC\u0089
 fragmentCompactionWriteThreshold=1000
 
-# 分片合并的查询负载阈值（小于该阈值的分片将被合并）
+# \u00E5\u0088\u0086\u00E7\u0089\u0087\u00E5\u0090\u0088\u00E5\u00B9\u00B6\u00E7\u009A\u0084\u00E6\u009F\u00A5\u00E8\u00AF\u00A2\u00E8\u00B4\u009F\u00E8\u00BD\u00BD\u00E9\u0098\u0088\u00E5\u0080\u00BC\u00EF\u00BC\u0088\u00E5\u00B0\u008F\u00E4\u00BA\u008E\u00E8\u00AF\u00A5\u00E9\u0098\u0088\u00E5\u0080\u00BC\u00E7\u009A\u0084\u00E5\u0088\u0086\u00E7\u0089\u0087\u00E5\u00B0\u0086\u00E8\u00A2\u00AB\u00E5\u0090\u0088\u00E5\u00B9\u00B6\u00EF\u00BC\u0089
 fragmentCompactionReadThreshold=1000
 
-# 分片合并的查询负载阈值比例（小于该阈值的分片将被合并）
+# \u00E5\u0088\u0086\u00E7\u0089\u0087\u00E5\u0090\u0088\u00E5\u00B9\u00B6\u00E7\u009A\u0084\u00E6\u009F\u00A5\u00E8\u00AF\u00A2\u00E8\u00B4\u009F\u00E8\u00BD\u00BD\u00E9\u0098\u0088\u00E5\u0080\u00BC\u00E6\u00AF\u0094\u00E4\u00BE\u008B\u00EF\u00BC\u0088\u00E5\u00B0\u008F\u00E4\u00BA\u008E\u00E8\u00AF\u00A5\u00E9\u0098\u0088\u00E5\u0080\u00BC\u00E7\u009A\u0084\u00E5\u0088\u0086\u00E7\u0089\u0087\u00E5\u00B0\u0086\u00E8\u00A2\u00AB\u00E5\u0090\u0088\u00E5\u00B9\u00B6\u00EF\u00BC\u0089
 fragmentCompactionReadRatioThreshold=0.1
 
 ####################
-### 元数据配置
+### \u00E5\u0085\u0083\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E9\u0085\u008D\u00E7\u00BD\u00AE
 ####################
 
-# 目前支持 zookeeper, etcd
-# 文件是默认的存储后端，方便部署
+# \u00E7\u009B\u00AE\u00E5\u0089\u008D\u00E6\u0094\u00AF\u00E6\u008C\u0081 zookeeper, etcd
+# \u00E6\u0096\u0087\u00E4\u00BB\u00B6\u00E6\u0098\u00AF\u00E9\u00BB\u0098\u00E8\u00AE\u00A4\u00E7\u009A\u0084\u00E5\u00AD\u0098\u00E5\u0082\u00A8\u00E5\u0090\u008E\u00E7\u00AB\u00AF\u00EF\u00BC\u008C\u00E6\u0096\u00B9\u00E4\u00BE\u00BF\u00E9\u0083\u00A8\u00E7\u00BD\u00B2
 metaStorage=zookeeper
 
-# 如果使用 zookeeper 作为元数据存储后端，需要提供
+# \u00E5\u00A6\u0082\u00E6\u009E\u009C\u00E4\u00BD\u00BF\u00E7\u0094\u00A8 zookeeper \u00E4\u00BD\u009C\u00E4\u00B8\u00BA\u00E5\u0085\u0083\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u00AD\u0098\u00E5\u0082\u00A8\u00E5\u0090\u008E\u00E7\u00AB\u00AF\u00EF\u00BC\u008C\u00E9\u009C\u0080\u00E8\u00A6\u0081\u00E6\u008F\u0090\u00E4\u00BE\u009B
 zookeeperConnectionString=127.0.0.1:2181
 
-# 如果使用 etcd 作为元数据存储后端，需要提供，如果有多个 etcd 实例，以逗号分隔
+# \u00E5\u00A6\u0082\u00E6\u009E\u009C\u00E4\u00BD\u00BF\u00E7\u0094\u00A8 etcd \u00E4\u00BD\u009C\u00E4\u00B8\u00BA\u00E5\u0085\u0083\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u00AD\u0098\u00E5\u0082\u00A8\u00E5\u0090\u008E\u00E7\u00AB\u00AF\u00EF\u00BC\u008C\u00E9\u009C\u0080\u00E8\u00A6\u0081\u00E6\u008F\u0090\u00E4\u00BE\u009B\u00EF\u00BC\u008C\u00E5\u00A6\u0082\u00E6\u009E\u009C\u00E6\u009C\u0089\u00E5\u00A4\u009A\u00E4\u00B8\u00AA etcd \u00E5\u00AE\u009E\u00E4\u00BE\u008B\u00EF\u00BC\u008C\u00E4\u00BB\u00A5\u00E9\u0080\u0097\u00E5\u008F\u00B7\u00E5\u0088\u0086\u00E9\u009A\u0094
 #etcdEndpoints=http://localhost:2379
 
-# 是否开启元数据内存管理
+# \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E5\u00BC\u0080\u00E5\u0090\u00AF\u00E5\u0085\u0083\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E5\u0086\u0085\u00E5\u00AD\u0098\u00E7\u00AE\u00A1\u00E7\u0090\u0086
 enableMetaCacheControl=false
 
-# 分片缓存最大内存限制，单位为 KB，默认 128 MB
+# \u00E5\u0088\u0086\u00E7\u0089\u0087\u00E7\u00BC\u0093\u00E5\u00AD\u0098\u00E6\u009C\u0080\u00E5\u00A4\u00A7\u00E5\u0086\u0085\u00E5\u00AD\u0098\u00E9\u0099\u0090\u00E5\u0088\u00B6\u00EF\u00BC\u008C\u00E5\u008D\u0095\u00E4\u00BD\u008D\u00E4\u00B8\u00BA KB\u00EF\u00BC\u008C\u00E9\u00BB\u0098\u00E8\u00AE\u00A4 128 MB
 fragmentCacheThreshold=131072
 
 ##########################
-### 执行层配置
+### \u00E6\u0089\u00A7\u00E8\u00A1\u008C\u00E5\u00B1\u0082\u00E9\u0085\u008D\u00E7\u00BD\u00AE
 ##########################
 
 enablePushDown=false
@@ -180,7 +180,7 @@ enablePushDown=false
 useStreamExecutor=false
 
 ##########################
-### 内存控制
+### \u00E5\u0086\u0085\u00E5\u00AD\u0098\u00E6\u008E\u00A7\u00E5\u0088\u00B6
 ##########################
 
 enableMemoryControl=false
@@ -194,49 +194,49 @@ systemMemoryThreshold=0.9
 systemCpuThreshold=0.9
 
 ####################
-### REST 服务配置
+### REST \u00E6\u009C\u008D\u00E5\u008A\u00A1\u00E9\u0085\u008D\u00E7\u00BD\u00AE
 ####################
 
-# rest 绑定的 ip
+# rest \u00E7\u00BB\u0091\u00E5\u00AE\u009A\u00E7\u009A\u0084 ip
 restIp=0.0.0.0
 
-# rest 绑定的端口
+# rest \u00E7\u00BB\u0091\u00E5\u00AE\u009A\u00E7\u009A\u0084\u00E7\u00AB\u00AF\u00E5\u008F\u00A3
 restPort=6666
 
-# 是否启用 rest 服务
+# \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E5\u0090\u00AF\u00E7\u0094\u00A8 rest \u00E6\u009C\u008D\u00E5\u008A\u00A1
 enableRestService=true
 
-# 乱序数据 margin, 单位是秒
+# \u00E4\u00B9\u00B1\u00E5\u00BA\u008F\u00E6\u0095\u00B0\u00E6\u008D\u00AE margin, \u00E5\u008D\u0095\u00E4\u00BD\u008D\u00E6\u0098\u00AF\u00E7\u00A7\u0092
 disorderMargin=10
 
-# rest 异步执行并发数
+# rest \u00E5\u00BC\u0082\u00E6\u00AD\u00A5\u00E6\u0089\u00A7\u00E8\u00A1\u008C\u00E5\u00B9\u00B6\u00E5\u008F\u0091\u00E6\u0095\u00B0
 asyncRestThreadPool=100
 
 ##########################
-### Python配置
+### Python\u00E9\u0085\u008D\u00E7\u00BD\u00AE
 ##########################
-# python脚本启动命令
-# 在Windows上需将python3改为python
+# python\u00E8\u0084\u009A\u00E6\u009C\u00AC\u00E5\u0090\u00AF\u00E5\u008A\u00A8\u00E5\u0091\u00BD\u00E4\u00BB\u00A4
+# \u00E5\u009C\u00A8Windows\u00E4\u00B8\u008A\u00E9\u009C\u0080\u00E5\u00B0\u0086python3\u00E6\u0094\u00B9\u00E4\u00B8\u00BApython
 # pythonCMD=python
-# 在unix上，建议使用"which python"查询出的绝对路径，如下所示
+# \u00E5\u009C\u00A8unix\u00E4\u00B8\u008A\u00EF\u00BC\u008C\u00E5\u00BB\u00BA\u00E8\u00AE\u00AE\u00E4\u00BD\u00BF\u00E7\u0094\u00A8"which python"\u00E6\u009F\u00A5\u00E8\u00AF\u00A2\u00E5\u0087\u00BA\u00E7\u009A\u0084\u00E7\u00BB\u009D\u00E5\u00AF\u00B9\u00E8\u00B7\u00AF\u00E5\u00BE\u0084\u00EF\u00BC\u008C\u00E5\u00A6\u0082\u00E4\u00B8\u008B\u00E6\u0089\u0080\u00E7\u00A4\u00BA
 #pythonCMD=/Library/Frameworks/Python.framework/Versions/3.7/bin/python3
 pythonCMD=python3
 
-# 是否初始化配置文件内指定的UDF/Transform
+# \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E5\u0088\u009D\u00E5\u00A7\u008B\u00E5\u008C\u0096\u00E9\u0085\u008D\u00E7\u00BD\u00AE\u00E6\u0096\u0087\u00E4\u00BB\u00B6\u00E5\u0086\u0085\u00E6\u008C\u0087\u00E5\u00AE\u009A\u00E7\u009A\u0084UDF/Transform
 needInitBasicUDFFunctions=false
 
 ##########################
-### Transform配置
+### Transform\u00E9\u0085\u008D\u00E7\u00BD\u00AE
 ##########################
-# 流式执行时，每批数据的大小
+# \u00E6\u00B5\u0081\u00E5\u00BC\u008F\u00E6\u0089\u00A7\u00E8\u00A1\u008C\u00E6\u0097\u00B6\u00EF\u00BC\u008C\u00E6\u00AF\u008F\u00E6\u0089\u00B9\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E7\u009A\u0084\u00E5\u00A4\u00A7\u00E5\u00B0\u008F
 batchSize=50
-# Transform任务执行线程池
+# Transform\u00E4\u00BB\u00BB\u00E5\u008A\u00A1\u00E6\u0089\u00A7\u00E8\u00A1\u008C\u00E7\u00BA\u00BF\u00E7\u00A8\u008B\u00E6\u00B1\u00A0
 transformTaskThreadPoolSize=10
-# Transform最大重试次数
+# Transform\u00E6\u009C\u0080\u00E5\u00A4\u00A7\u00E9\u0087\u008D\u00E8\u00AF\u0095\u00E6\u00AC\u00A1\u00E6\u0095\u00B0
 transformMaxRetryTimes=3
 
 ####################
-### MQTT 配置
+### MQTT \u00E9\u0085\u008D\u00E7\u00BD\u00AE
 ####################
 
 enableMqtt=false
@@ -252,7 +252,7 @@ mqttPayloadFormatter=cn.edu.tsinghua.iginx.mqtt.JsonPayloadFormatter
 mqttMaxMessageSize=1048576
 
 ##########################
-### SimplePolicy 策略配置
+### SimplePolicy \u00E7\u00AD\u0096\u00E7\u0095\u00A5\u00E9\u0085\u008D\u00E7\u00BD\u00AE
 ##########################
 
 reAllocatePeriod=300000
@@ -261,14 +261,14 @@ enableStorageGroupValueLimit=true
 
 storageGroupValueLimit=200.0
 
-# 是否允许通过环境变量设置参数
+# \u00E6\u0098\u00AF\u00E5\u0090\u00A6\u00E5\u0085\u0081\u00E8\u00AE\u00B8\u00E9\u0080\u009A\u00E8\u00BF\u0087\u00E7\u008E\u00AF\u00E5\u00A2\u0083\u00E5\u008F\u0098\u00E9\u0087\u008F\u00E8\u00AE\u00BE\u00E7\u00BD\u00AE\u00E5\u008F\u0082\u00E6\u0095\u00B0
 enableEnvParameter=false
 
 #################
-### 文件读写配置
+### \u00E6\u0096\u0087\u00E4\u00BB\u00B6\u00E8\u00AF\u00BB\u00E5\u0086\u0099\u00E9\u0085\u008D\u00E7\u00BD\u00AE
 #################
 
-# 读取csv文件时，每批数据的行数
+# \u00E8\u00AF\u00BB\u00E5\u008F\u0096csv\u00E6\u0096\u0087\u00E4\u00BB\u00B6\u00E6\u0097\u00B6\u00EF\u00BC\u008C\u00E6\u00AF\u008F\u00E6\u0089\u00B9\u00E6\u0095\u00B0\u00E6\u008D\u00AE\u00E7\u009A\u0084\u00E8\u00A1\u008C\u00E6\u0095\u00B0
 batchSizeImportCsv=10000
 
 #################
