--- a/.github/actions/service/vectordb/action.yml
+++ b/.github/actions/service/vectordb/action.yml
@@ -27,12 +27,10 @@ runs:
           uses: ./.github/actions/docker-compose
 
         - if: fromJSON(inputs.start)
-          name: Create Config for milvus docker compose on Windows
+          name: Create Config for milvus docker compose
           shell: bash
           working-directory: ${{ github.workspace }}
           run: |
-              pwd
-              echo ${{ github.workspace }}
               for port in ${{ inputs.ports }}; do
                 mkdir -p $port
                 cp -f docker/milvus/docker-compose.yml $port/docker-compose-$port.yml
@@ -47,8 +45,6 @@ runs:
           shell: bash
           working-directory: ${{ github.workspace }}
           run: |
-              pwd
-              whoami
               for port in ${{ inputs.ports }}; do
                 sudo chown -R $(whoami) $port/
                 sudo nohup docker-compose -f $port/docker-compose-$port.yml up -d
@@ -62,10 +58,6 @@ runs:
                 fi
               done
               docker ps -a
-
-        #              docker logs milvus19530-standalone
-        #              docker logs milvus19530-minio
-        #              docker logs milvus19530-etcd
 
         - if: fromJSON(inputs.start) && runner.os == 'Windows'
           name: Start milvus on Windows
@@ -104,16 +96,3 @@ runs:
               sed -i"" -e "s/127.0.0.1/${MILVUS_HOST}/g" test/src/test/java/cn/edu/tsinghua/iginx/integration/expansion/vectordb/VectorDBHistoryDataGenerator.java
               sed -i"" -e "s/127.0.0.1#19530/${MILVUS_HOST}#19530/g" test/src/test/resources/testConfig.properties
               sed -i"" -e "s/127.0.0.1#19530/${MILVUS_HOST}#19530/g" conf/config.properties
-#            MILVUS_HOST="192.168.106.2"
-
-#        - if: runner.os == 'Windows'
-#          name: Set JAVA_HOME
-#          shell: wsl-run {0}
-#          run: |
-#              sudo apt update
-#              sudo apt install openjdk-8-jdk -y
-#              echo "export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64" >> $HOME/.bashrc
-#              echo "export PATH=\$PATH:\$JAVA_HOME/bin" >> $HOME/.bashrc
-#              source $HOME/.bashrc
-#              java -version
-#              echo $JAVA_HOME
