--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -18,7 +18,6 @@ on:
                 type: string
                 required: false
                 default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
-#                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
             metadata-matrix:
                 description: "The metadata to run the test on"
                 type: string
@@ -28,15 +27,13 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                #                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "VectorDB"]'
-                default: '["VectorDB"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "VectorDB"]'
 
 env:
     FUNCTEST: NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT,PySessionIT
 
 jobs:
     DB-CE:
-        #        timeout-minutes: 120
         timeout-minutes: 360
         strategy:
             fail-fast: false
@@ -71,17 +68,6 @@ jobs:
               shell: bash
               run: |
                   mvn clean package -DskipTests -P-format -q
-
-            - name: Check Port
-              shell: bash
-              run: |
-                  for port in ${{ inputs.ports }}; do
-                    if lsof -i :$port | grep -q LISTEN; then
-                      echo "Port $port is open."
-                    else
-                      echo "Port $port is not open."
-                    fi
-                  done
 
               # 第 1 阶段测试开始==========================================
             - name: Prepare CapExp environment oriHasDataExpHasData
