--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -18,7 +18,6 @@ on:
                 type: string
                 required: false
                 default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
-#                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
             metadata-matrix:
                 description: "The metadata to run the test on"
                 type: string
@@ -28,12 +27,10 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                #                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "VectorDB"]'
-                default: '["VectorDB"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "VectorDB"]'
 
 jobs:
     Union-DB-Test:
-        #        timeout-minutes: 40
         timeout-minutes: 360
         strategy:
             fail-fast: false
