--- a/conf/config.properties
+++ b/conf/config.properties
@@ -91,9 +91,9 @@ constraintChecker=naive
 physicalOptimizer=naive
 
 # 分片策略
-#policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
+policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
 #policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
-policyClassName=cn.edu.tsinghua.iginx.policy.single.SinglePolicy
+#policyClassName=cn.edu.tsinghua.iginx.policy.single.SinglePolicy
 
 #统计信息收集类
 # statisticsCollectorClassName=cn.edu.tsinghua.iginx.statistics.StatisticsCollector
@@ -221,10 +221,10 @@ asyncRestThreadPool=100
 # pythonCMD=python
 # 在unix上，建议使用"which python"查询出的绝对路径，如下所示
 #pythonCMD=/Library/Frameworks/Python.framework/Versions/3.7/bin/python3
-pythonCMD=python
+pythonCMD=python3
 
 # 是否初始化配置文件内指定的UDF/Transform
-needInitBasicUDFFunctions=true
+needInitBasicUDFFunctions=false
 
 ##########################
 ### Transform配置
