重新排序config文件

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -33,6 +33,10 @@ username=root
 # iginx 本身的密码
 password=root
 
+##########################
+### 数据库配置
+##########################
+
 # 数据库列表，使用','分隔不同实例
 storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
 #storageEngineList=127.0.0.1#8086#influxdb#url=http://localhost:8086/#token=your-token#organization=your-organization#has_data=false
@@ -42,18 +46,60 @@ storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPool
 #storageEngineList=127.0.0.1#27017#mongodb#uri="mongodb://127.0.0.1:27017/?maxPoolSize=200&maxIdleTimeMS=60000&waitQueueTimeoutMS=50000"#has_data=false#schema.sample.size=1000#dummy.sample.size=0
 #storageEngineList=127.0.0.1#6379#redis#has_data=false#is_read_only=false#timeout=10000#data_db=1#dummy_db=0
 
-# UDF定义文件夹存储路径（相对或绝对），文件夹内的文件需要按以下格式进行编写
-# %defaultUDFDir%
-#   |- udf_list         (udf函数列表及元信息文件)
-#   |- python_scripts/   (python脚本文件夹)
-#       |- xxx.py       (python脚本)
-defaultUDFDir=udf_funcs
+# 底层数据库类名
+databaseClassNames=iotdb12=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage,influxdb=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage,filesystem=cn.edu.tsinghua.iginx.filesystem.FileSystemStorage,relational=cn.edu.tsinghua.iginx.relational.RelationalStorage,mongodb=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage,redis=cn.edu.tsinghua.iginx.redis.RedisStorage
+
+##########################
+### 分片配置
+##########################
 
 # 写入的副本个数
 replicaNum=0
 
-# 底层数据库类名
-databaseClassNames=iotdb12=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage,influxdb=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage,filesystem=cn.edu.tsinghua.iginx.filesystem.FileSystemStorage,relational=cn.edu.tsinghua.iginx.relational.RelationalStorage,mongodb=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage,redis=cn.edu.tsinghua.iginx.redis.RedisStorage
+# 分片策略
+policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
+#policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
+
+# 重分片时，新分片的结束时间多加的间距，单位为秒
+reshardFragmentTimeMargin=60
+
+##########################
+### 统计信息配置
+##########################
+
+#统计信息收集类
+# statisticsCollectorClassName=cn.edu.tsinghua.iginx.statistics.StatisticsCollector
+
+# 统计信息打印间隔，单位毫秒
+# statisticsLogInterval=5000
+
+##########################
+### Session 配置
+##########################
+
+# thrift线程池最小线程数量
+minThriftWorkerThreadNum = 20
+
+# thrift线程池最大线程数量
+maxThriftWrokerThreadNum = 2147483647
+
+##########################
+### 逻辑层配置
+##########################
+
+# 约束
+constraintChecker=naive
+
+# 逻辑层优化策略
+queryOptimizer=rbo
+
+# 优化器规则
+ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,ConstantPropagationRule=on,DistinctEliminateRule=on,\
+  ConstantFoldingRule=on,FilterPushDownRule=off,JoinFactorizationRule=on,SetTransformPushDownPathUnionJoinRule=off
+
+##########################
+### 执行层配置
+##########################
 
 # 内存任务执行线程池
 memoryTaskThreadPoolSize=200
@@ -64,12 +110,12 @@ physicalTaskThreadPoolSizePerStorage=100
 # 每个存储节点任务最大堆积数
 maxCachedPhysicalTaskPerStorage=500
 
-# 逻辑层优化策略
-queryOptimizer=rbo
+# 物理层优化策略
+physicalOptimizer=naive
 
-# 优化器规则
-ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,ConstantPropagationRule=on,DistinctEliminateRule=on,\
-  ConstantFoldingRule=on,FilterPushDownRule=off,JoinFactorizationRule=on,SetTransformPushDownPathUnionJoinRule=off
+enablePushDown=false
+
+useStreamExecutor=false
 
 # ParallelFilter触发行数
 parallelFilterThreshold=10000
@@ -83,34 +129,6 @@ parallelGroupByPoolSize=5
 parallelGroupByPoolNum=5
 # ParallelGroupBy线程池数量
 streamParallelGroupByWorkerNum=5
-
-# 约束
-constraintChecker=naive
-
-# 物理层优化策略
-physicalOptimizer=naive
-
-# 分片策略
-policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
-#policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
-
-#统计信息收集类
-# statisticsCollectorClassName=cn.edu.tsinghua.iginx.statistics.StatisticsCollector
-
-# 统计信息打印间隔，单位毫秒
-# statisticsLogInterval=5000
-
-# 重分片时，新分片的结束时间多加的间距，单位为秒
-reshardFragmentTimeMargin=60
-
-# thrift线程池最小线程数量
-minThriftWorkerThreadNum = 20
-
-# thrift线程池最大线程数量
-maxThriftWrokerThreadNum = 2147483647
-
-# 当前是否是UT测试环境
-utTestEnv = false
 
 ####################
 ### Migration 相关配置
@@ -172,14 +190,6 @@ enableMetaCacheControl=false
 fragmentCacheThreshold=131072
 
 ##########################
-### 执行层配置
-##########################
-
-enablePushDown=false
-
-useStreamExecutor=false
-
-##########################
 ### 内存控制
 ##########################
 
@@ -224,6 +234,13 @@ pythonCMD=python3
 
 # 是否初始化配置文件内指定的UDF/Transform
 needInitBasicUDFFunctions=false
+
+# UDF定义文件夹存储路径（相对或绝对），文件夹内的文件需要按以下格式进行编写
+# %defaultUDFDir%
+#   |- udf_list         (udf函数列表及元信息文件)
+#   |- python_scripts/   (python脚本文件夹)
+#       |- xxx.py       (python脚本)
+defaultUDFDir=udf_funcs
 
 ##########################
 ### Transform配置
@@ -289,3 +306,10 @@ mailSmtpPassword=12345678
 mailSender=12345678@qq.com
 
 mailRecipient=12345678@qq.com
+
+#################
+### 其他配置
+#################
+
+# 当前是否是UT测试环境
+utTestEnv = false
