--- a/conf/config.properties
+++ b/conf/config.properties
@@ -224,6 +224,7 @@ pythonCMD=python3
 
 # 是否初始化配置文件内指定的UDF/Transform
 needInitBasicUDFFunctions=false
+needInitBasicUDFFunctions=true
 
 ##########################
 ### Transform配置
