multiple & udf wip

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -91,9 +91,9 @@ constraintChecker=naive
 physicalOptimizer=naive
 
 # 分片策略
-policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
+#policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
 #policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
-#policyClassName=cn.edu.tsinghua.iginx.policy.single.SinglePolicy
+policyClassName=cn.edu.tsinghua.iginx.policy.single.SinglePolicy
 
 #统计信息收集类
 # statisticsCollectorClassName=cn.edu.tsinghua.iginx.statistics.StatisticsCollector
