--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -5,6 +5,30 @@ inputs:
         description: "DB name"
         required: false
         default: IoTDB12
+    IoTDB12-ports:
+        description: "IoTDB12 ports"
+        required: false
+        default: 6667
+    InfluxDB-ports:
+        description: "InfluxDB ports"
+        required: false
+        default: 8088
+    MongoDB-ports:
+        description: "MongoDB ports"
+        required: false
+        default: 27017
+    MySQL-ports:
+        description: "MySQL ports"
+        required: false
+        default: 3306
+    PostgreSQL-ports:
+        description: "PostgreSQL ports"
+        required: false
+        default: 5432
+    Redis-ports:
+        description: "Redis ports"
+        required: false
+        default: 6379
 
 runs:
     using: "composite" # Mandatory parameter
@@ -28,13 +52,13 @@ runs:
           run: |
               if [ "$RUNNER_OS" == "Linux" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/influxdb.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/influxdb.sh" 8088 8087
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/influxdb.sh" ${{ inputs.InfluxDB-ports }}
               elif [ "$RUNNER_OS" == "Windows" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/influxdb_windows.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/influxdb_windows.sh" 8088 8087
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/influxdb_windows.sh" ${{ inputs.InfluxDB-ports }}
               elif [ "$RUNNER_OS" == "macOS" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/influxdb_macos.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/influxdb_macos.sh" 8088 8087
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/influxdb_macos.sh" ${{ inputs.InfluxDB-ports }}
               else
                 echo "$RUNNER_OS is not supported"
                 exit 1
@@ -50,13 +74,13 @@ runs:
           run: |
               if [ "$RUNNER_OS" == "Linux" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/iotdb12.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/iotdb12.sh" 6667 6668 6669
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/iotdb12.sh" ${{ inputs.IoTDB12-ports }}
               elif [ "$RUNNER_OS" == "Windows" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/iotdb12_windows.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/iotdb12_windows.sh" 6667 6668 6669
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/iotdb12_windows.sh" ${{ inputs.IoTDB12-ports }}
               elif [ "$RUNNER_OS" == "macOS" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/iotdb12_macos.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/iotdb12_macos.sh" 6667 6668 6669
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/startup/iotdb12_macos.sh" ${{ inputs.IoTDB12-ports }}
               else
                 echo "$RUNNER_OS is not supported"
                 exit 1
@@ -91,7 +115,7 @@ runs:
               stop: false
               clean: false
               start: true
-              ports: 27017 27018 27019
+              ports: ${{ inputs.MongoDB-ports }}
 
         - if: inputs.DB-name=='MongoDB'
           name: Modify IGinX Config
@@ -111,7 +135,7 @@ runs:
               stop: false
               clean: false
               start: true
-              ports: 6379 6380 6381
+              ports: ${{ inputs.Redis-ports }}
 
         - if: inputs.DB-name=='Redis'
           name: Modify IGinX Config
@@ -131,7 +155,7 @@ runs:
               stop: false
               clean: false
               start: true
-              ports: 5432 5433 5434
+              ports: ${{ inputs.PostgreSQL-ports }}
 
         - if: inputs.DB-name=='PostgreSQL'
           name: Modify IGinX Config
@@ -148,7 +172,7 @@ runs:
           name: Start MySQL Service
           uses: ./.github/actions/service/mysql
           with:
-              ports: 3306 3307 3308
+              ports: ${{ inputs.MySQL-ports }}
 
         - if: inputs.DB-name == 'MySQL'
           id: mysql-properties
