--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -151,23 +151,11 @@ runs:
               ports: 3306 3307 3308
 
         - if: inputs.DB-name == 'MySQL'
-          id: mysql-properties
-          name: Get MySQL Properties Path
-          working-directory: ${{ github.workspace }}
-          shell: bash
-          run: |
-              CONFIG_PATH="${PWD}/dataSource/relational/src/main/resources/mysql-meta-template.properties"
-              if [ "$RUNNER_OS" == "Windows" ]; then
-                  CONFIG_PATH=$(cygpath -m $CONFIG_PATH)
-              fi
-              echo "path=$CONFIG_PATH" >> $GITHUB_OUTPUT
-
-        - if: inputs.DB-name == 'MySQL'
           name: Modify IGinX Config
           uses: ./.github/actions/edit
           with:
               paths: conf/config.properties
-              statements: s|^#storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#password=mysql#has_data=false#meta_properties_path=your-meta-properties-path|storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#has_data=false#meta_properties_path=${{ steps.mysql-properties.outputs.path }}|g
+              statements: s|^#storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#password=mysql#has_data=false#meta_properties_path=your-meta-properties-path|storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#has_data=false|g
 
         - if: inputs.DB-name=='FileSystem'
           name: Run DB
