delete debug actions

--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -67,9 +67,7 @@ MySQL_port=3306,3307,3308
 VectorDB_port=19530,19531,19532
 
 # Local test stand-alone
-#stand_alone_DB=IoTDB12
-stand_alone_DB=VectorDB
-#stand_alone_DB=MySQL
+stand_alone_DB=IoTDB12
 
 # Local test DB-CE
 is_scaling=false
