--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -179,13 +179,13 @@ runs:
               ports: 19530 19531 19532
 
         - if: inputs.DB-name=='VectorDB' && runner.os == 'macOS'
-          name: Run Milvus DB
+          name: Run Milvus DB on MacOS
           uses: ./.github/actions/service/vectordb
           with:
-            stop: false
-            clean: false
-            start: true
-            ports: 19530
+              stop: false
+              clean: false
+              start: true
+              ports: 19530
 
         - if: inputs.DB-name=='VectorDB'
           name: Modify IGinX Config
@@ -200,12 +200,6 @@ runs:
           with:
               paths: conf/config.properties
               statements: s/^#storageEngineList=192.168.106.2#19530/storageEngineList=192.168.106.2#19530/g
-
-        - if: inputs.DB-name=='VectorDB' && runner.os == 'macOS'
-          name: Show DB Config
-          shell: bash
-          run: |
-              colima status
 
         - if: inputs.DB-name=='FileSystem'
           name: Run DB
